--- a/Website/css/style.css
+++ b/Website/css/style.css
@@ -1,21 +1,29 @@
-.block {
-    display: block;
-
+.slider {
+    -webkit-appearance: none;
+    width: 100%;
+    height: 15px;
+    border-radius: 5px;   
+    background: #d3d3d3;
+    outline: none;
+    opacity: 0.7;
+    -webkit-transition: .2s;
+    transition: opacity .2s;
 }
 
-
-#questionOne {
-    width: 100%;
-    background-color: rosybrown;
-    padding: 20px;
-    color: white;
-    font-family: Trebuchet MS; 
+.slider::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    appearance: none;
+    width: 25px;
+    height: 25px;
+    border-radius: 50%; 
+    background: #4CAF50;
+    cursor: pointer;
 }
 
-#questionTwo {
-    width: 100%;
-    background-color: dimgray;
-    padding: 20px;
-    color: white;
-    font-family: Trebuchet MS; 
+.slider::-moz-range-thumb {
+    width: 25px;
+    height: 25px;
+    border-radius: 50%;
+    background: #4CAF50;
+    cursor: pointer;
 }
