--- a/FrameworkApp/www/css/my-app.css
+++ b/FrameworkApp/www/css/my-app.css
@@ -4,16 +4,21 @@
     
     }
 
-/*.card {
+.card {
     background-color:aliceblue;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     border-radius: 
     padding: 10px;
-}*/
+}
+
+img{
+margin: 10%;
+    text-align: center;
+}
     
 /* to change the background*/
-/*.page-content{
-    background-color: aquamarine;
+.page-content{
+    
 }
 
 p{
